[project]
name = "plastron-cli"
description = "Plastron command line client"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "BeautifulSoup4~=4.12",
    "lxml~=5.3",
    "Pillow~=10.4",
    "plastron-models",
    "plastron-repo",
    "plastron-utils",
    "pyparsing~=3.1",
    "pysolr~=3.9",
    "PyYAML~=6.0",
    "rdflib~=6.3",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
]

[project.scripts]
plastron = "plastron.cli:main"

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }

[tool.pytest.ini_options]
markers = ['jobs_dir']
