[project]
name = "plastron-client"
description = "HTTP client for interacting with Fedora 4 repositories"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "rdflib~=6.3",
    "requests~=2.32",
    "requests-jwtauth~=1.0",
    "urlobject~=2.4",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "freezegun~=1.5",
    "http-server-mock~=1.7",
    "pytest~=8.3",
    "pytest-cov~=5.0",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
