[project]
name = "plastron-models"
description = "Content modelling built on the Plastron RDF to Python object mapper"
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name='Josh Westgard', email='westgard@umd.edu' },
    { name='Peter Eichman', email='peichman@umd.edu' },
    { name='Mohamed Abdul Rasheed', email='mohideen@umd.edu' },
    { name='Ben Wallberg', email='wallberg@umd.edu' },
    { name='David Steelman', email='dsteelma@umd.edu' },
    { name='Marc Andreu Grillo Aguilar', email='aguilarm@umd.edu' },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "edtf_validate~=2.0",
    "importlib_metadata~=8.5",
    "lxml~=5.3",
    "paramiko~=3.4",
    "pillow~=10.4",
    "plastron-client",
    "plastron-rdf",
    "plastron-utils",
    "python-iso639 >= 2024.4.27",
    # rdflib 6.0.0 fixed the 308 HTTP redirect bug
    "rdflib >= 6.0.0",
    "requests~=2.32",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "freezegun~=1.5",
    "httpretty~=1.1",
    "pytest~=8.3",
    "pytest-cov~=5.0",
]

[project.entry-points.'plastron.content_models']
Item = "plastron.models.umd:Item"
Issue = "plastron.models.newspaper:Issue"
Letter = "plastron.models.letter:Letter"
Poster = "plastron.models.poster:Poster"

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }
